--- a/package.json
+++ b/package.json
@@ -41,9 +41,7 @@
   "author": "Google LLC",
   "license": "BSD-3-Clause",
   "dependencies": {
-    "@lit/reactive-element": "^2.0.4",
-    "lit": "^3.2.0",
-    "lit-html": "^3.2.0"
+    "lit": "^3.2.0"
   },
   "devDependencies": {
     "@11ty/eleventy": "^1.0.1",
@@ -53,7 +51,6 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-replace": "^5.0.7",
     "@rollup/plugin-terser": "^0.4.4",
-    "@types/mocha": "^10.0.7",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
     "@web/dev-server": "^0.1.31",
@@ -62,6 +59,7 @@
     "@web/test-runner-playwright": "^0.9.0",
     "@webcomponents/webcomponentsjs": "^2.8.0",
     "eslint": "^8.15.0",
+    "kakao.maps.d.ts": "^0.1.40",
     "lit-analyzer": "^1.2.1",
     "prettier": "^2.6.2",
     "rimraf": "^3.0.2",
